<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/moq"
    tools:context=".MainActivity">


  <TextView
      android:id="@+id/cot"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="80sp"
      android:layout_marginTop="35dp"
      android:paddingTop="35dp"
      android:layout_marginBottom="30dp"
      android:textColor="#E2E2E6"
      android:textStyle="bold"
      android:layout_centerHorizontal="true"
      android:fontFamily="sans-serif-black"
      android:textAlignment="center"
      android:text="@string/_0"
      />

  <TextSwitcher
      android:id="@+id/swit"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="20dp"
      android:textStyle="bold"
      android:textAlignment="center"
      android:textAllCaps="true"
      android:layout_centerHorizontal="true"
      android:textColor="#Ffff"
      android:layout_below="@+id/cot"
      android:background="#9EA8E1"
      android:textSize="18sp" />


  <Button
      android:id="@+id/add"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:textSize="70sp"
      android:textColor="#D8CDCD"
      android:gravity="center"
      android:textStyle="bold"
      android:background="@drawable/circle"
      android:textAlignment="center"
      android:layout_marginBottom="20dp"
      android:text="@string/Add" />
  <Button
      android:id="@+id/reset"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_alignParentEnd="true"
      android:textAlignment="center"
      android:background="@drawable/ring"
      android:textColor="#E2E2E6"
      android:gravity="center"
      android:textSize="14sp"
      android:text="@string/Reset"/>

  <Button
      android:id="@+id/nex"
      android:layout_width="60dp"
      android:layout_height="35dp"
      android:layout_below="@+id/add"
      android:textAlignment="center"
      android:textSize="12sp"
      android:layout_alignParentStart="true"
      android:gravity="center"
      android:background="@drawable/ring"
      android:textColor="#C1C1D8"
      android:text="@string/Next" />

  <Button
      android:id="@+id/prev"
      android:layout_width="60dp"
      android:layout_height="35dp"
      android:layout_below="@+id/add"
      android:gravity="center"
      android:textColor="#D4D4ED"
      android:layout_alignParentEnd="true"
      android:textSize="12sp"
      android:background="@drawable/ring"
      android:text="@string/Prev" />
  <com.google.android.gms.ads.AdView
      android:id="@+id/adView"
      android:layout_marginBottom="30dp"
      xmlns:ads="http://schemas.android.com/apk/res-auto"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      ads:adSize="SMART_BANNER"
      ads:adUnitId="ca-app-pub-3940256099942544~3347511713">
  </com.google.android.gms.ads.AdView>



</RelativeLayout>